--- a/index.html
+++ b/index.html
@@ -1303,9 +1303,9 @@
 					<div class="filter-container portfolio-nav">
 						<ul class="list-inline filter">
 							<li><a href="#" class="active-portfolio" data-filter="*">All </a></li>
-							<li><a href="#" data-filter=".FullStackDev">Full Stack Dev</a></li>
-							<li><a href="#" data-filter=".DataScience">Data Science & IA</a></li>
-							<li><a href="#" data-filter=".DevOps">DevOps</a></li>
+							<li><a href="#" data-filter=".FullStackDevProject">Full Stack Dev</a></li>
+							<li><a href="#" data-filter=".DataScienceProject">Data Science & IA</a></li>
+							<li><a href="#" data-filter=".DevOpsProject">DevOps</a></li>
 						</ul>
 					</div>
 					<!-- Portfolio Filter list End -->
@@ -1315,7 +1315,7 @@
 			<div class="row portfolio-boxes">
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDevProject ">
 					<div class="single-portfolio">
 						<a href="#popup-24" class="has-popup">
 							<img src="images/static-res-pages-project.jpg" class="Portfolio Image" alt="" />
@@ -1349,7 +1349,7 @@
 
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDevProject ">
 					<div class="single-portfolio">
 						<a href="#popup-25" class="has-popup">
 							<img src="images/Mandra3.jpg" class="Portfolio Image" alt="" />
@@ -1383,7 +1383,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDevProject ">
 					<div class="single-portfolio">
 						<a href="#popup-26" class="has-popup">
 							<img src="images/home page.jpg" class="Portfolio Image" alt="" />
@@ -1417,7 +1417,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDevProject ">
 					<div class="single-portfolio">
 						<a href="#popup-27" class="has-popup">
 							<img src="images/accueil.jpg" class="Portfolio Image" alt="" />
@@ -1460,7 +1460,7 @@
 
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDevProject ">
 					<div class="single-portfolio">
 						<a href="#popup-28" class="has-popup">
 							<img src="images/e-commerce.jpg" class="Portfolio Image" alt="" />
@@ -1496,7 +1496,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DevOps">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DevOpsProject ">
 					<div class="single-portfolio">
 						<a href="#popup-29" class="has-popup">
 							<img src="images/BackEnd_Tp_Achat.jpg" class="Portfolio Image" alt="" />
@@ -1529,7 +1529,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DevOps">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DevOpsProject ">
 					<div class="single-portfolio">
 						<a href="#popup-30" class="has-popup">
 							<img src="images/FontEnd_Tp_Achat.jpg" class="Portfolio Image" alt="" />
@@ -1562,7 +1562,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScienceProject ">
 					<div class="single-portfolio">
 						<a href="#popup-31" class="has-popup">
 							<img src="images/Plant-Disease-Detection-AI-System.png" class="Portfolio Image" alt="" />
@@ -1594,7 +1594,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScienceProject ">
 					<div class="single-portfolio">
 						<a href="#popup-32" class="has-popup">
 							<img src="images/language_distribution_bar_chart.png" class="Portfolio Image" alt="" />
@@ -1628,7 +1628,7 @@
 
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScienceProject ">
 					<div class="single-portfolio">
 						<a href="#popup-33" class="has-popup">
 							<img src="images/language_occurrences_bar_chart.png" class="Portfolio Image" alt="" />
@@ -1661,7 +1661,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDevProject ">
 					<div class="single-portfolio">
 						<a href="#popup-34" class="has-popup">
 							<img src="images/web1.jpg" class="Portfolio Image" alt="" />
@@ -1695,7 +1695,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDevProject ">
 					<div class="single-portfolio">
 						<a href="#popup-35" class="has-popup">
 							<img src="images/The Bridge.jpg" class="Portfolio Image" alt="" />
@@ -1726,7 +1726,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDevProject ">
 					<div class="single-portfolio">
 						<a href="#popup-36" class="has-popup">
 							<img src="images/Portfolio.jpg" class="Portfolio Image" alt="" />
@@ -1757,7 +1757,7 @@
 				<!-- Single Portfolio Ends -->
 
 				<!-- Single Portfolio starts -->
-				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDev">
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box FullStackDevProject ">
 					<div class="single-portfolio">
 						<a href="#popup-37" class="has-popup">
 							<img src="images/homrani.jpg" class="Portfolio Image" alt="" />
