--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 <body data-spy="scroll" data-target="#main-navbar" data-offset="75">
 
 	<!-- Preloader starts -->
-	<!-- <div class="preloader">
+	<div class="preloader">
 		<div class="loader">
 			<div class="diamond"></div>
 			<div class="diamond"></div>
 			<div class="diamond"></div>
 		</div>
-	</div> -->
+	</div>
 	<!-- Preloader Ends -->
 
 	<!-- Header Section Start -->
