--- a/index.html
+++ b/index.html
@@ -1925,34 +1925,34 @@
 	<!-- Footer Section Ends -->
 
 	<!-- Jquery Library File -->
-	<script src="js/jquery-1.12.4.min.js" defer></script>
+	<script src="js/jquery-1.12.4.min.js" ></script>
 	<!-- Bootstrap js file -->
-	<script src="js/bootstrap.min.js"defer></script>
+	<script src="js/bootstrap.min.js"></script>
 	<!-- Wow js file -->
-	<script src="js/wow.js"defer></script>
+	<script src="js/wow.js"></script>
 	<!-- Swiper Carousel js file -->
-	<script src="js/swiper.min.js"deferdefer></script>
+	<script src="js/swiper.min.js"></script>
 	<!-- Counterup js file -->
-	<script src="js/waypoints.min.js"defer></script>
-	<script src="js/jquery.counterup.min.js"defer></script>
+	<script src="js/waypoints.min.js"></script>
+	<script src="js/jquery.counterup.min.js"></script>
 	<!-- Isotop js file -->
-	<script src="js/isotope.min.js"defer></script>
+	<script src="js/isotope.min.js"></script>
 	<!-- Magnific Popup core JS file -->
-	<script src="js/jquery.magnific-popup.min.js"defer></script>
+	<script src="js/jquery.magnific-popup.min.js"></script>
 	<!-- Slick Nav js file -->
-	<script src="js/jquery.slicknav.js"defer></script>
+	<script src="js/jquery.slicknav.js"></script>
 	<!-- SmoothScroll -->
-	<script src="js/SmoothScroll.js"defer></script>
+	<script src="js/SmoothScroll.js"></script>
 	<!-- Animated Headline js file -->
-	<script src="js/animation-headline.js"defer></script>
+	<script src="js/animation-headline.js"></script>
 	<!-- Main Custom js file -->
-	<script src="js/function.js" defer></script>
+	<script src="js/function.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
 		integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-		crossorigin="anonymous" defer></script>
+		crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
 		integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-		crossorigin="anonymous" defer></script>
+		crossorigin="anonymous"></script>
 </body>
 
 </html>
