--- a/index.html
+++ b/index.html
@@ -1302,10 +1302,10 @@
 					<!-- Portfolio Filter list start -->
 					<div class="filter-container portfolio-nav">
 						<ul class="list-inline filter">
-							<li><a href="#" class="active-portfolio" data-filter="*">All </a></li>
-							<li><a href="#" data-filter=".FullStackDevProject">Full Stack Dev</a></li>
-							<li><a href="#" data-filter=".DataScienceProject">Data Science & IA</a></li>
-							<li><a href="#" data-filter=".DevOpsProject">DevOps</a></li>
+							<li><a href="#portfolio" class="active-portfolio" data-filter="*">All </a></li>
+							<li><a href="#portfolio" data-filter=".FullStackDevProject">Full Stack Dev</a></li>
+							<li><a href="#portfolio" data-filter=".DataScienceProject">Data Science & IA</a></li>
+							<li><a href="#portfolio" data-filter=".DevOpsProject">DevOps</a></li>
 						</ul>
 					</div>
 					<!-- Portfolio Filter list End -->
