--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 				<div class="col-lg-8">
 					<!-- About Content start -->
 					<div class="about-content wow fadeInUp" data-wow-delay="0.8s">
-						<h3>I'm Oussama Mansouri</h3>
+						<h3>I'm Oussema Mansouri</h3>
 						<p>I'm a versatile Full Stack Developer, proficient in building modern web applications,
 							with a strong data science background and an interest in DevOps.
 						</p>
@@ -653,10 +653,10 @@
 					<!-- Certificates Filter list start -->
 					<div class="filter-container portfolio-nav">
 						<ul class="list-inline filter">
-							<li><a href="#" class="active-portfolio" data-filter="*">All </a></li>
-							<li><a href="#" data-filter=".FullStackDev">Full Stack Dev</a></li>
-							<li><a href="#" data-filter=".DataScience">Data Science & IA</a></li>
-							<li><a href="#" data-filter=".DevOps">DevOps</a></li>
+							<li><a href="#certification" class="active-portfolio" data-filter="*">All </a></li>
+							<li><a href="#certification" data-filter=".FullStackDev">Full Stack Dev</a></li>
+							<li><a href="#certification" data-filter=".DataScience">Data Science & IA</a></li>
+							<li><a href="#certification" data-filter=".DevOps">DevOps</a></li>
 						</ul>
 					</div>
 					<!-- Certificates Filter list End -->
@@ -678,7 +678,7 @@
 					</div>
 					<div id="popup-1" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/DFPC.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/DFPC.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/CertiProf Certifications/DevOps-Certificate-Mansouri-Oussema.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -704,7 +704,7 @@
 					</div>
 					<div id="popup-2" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/Formation_DevOps.jpg" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/Formation_DevOps.jpg" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/Certificates/Formation_DevOps.jpg" target="_blank"
 									class="btn-view-project">View PDF</a>
@@ -729,7 +729,7 @@
 					</div>
 					<div id="popup-3" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/DevOps_Tools.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/DevOps_Tools.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/DevOps Tools Certificate For Oussema Mansouri.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -781,7 +781,7 @@
 					<div id="popup-5" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
 							<img src="images/Certificates/The_new_JS_For_Web_Dev.png"
-								alt="Advanced JavaScript Certificate">
+								alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/TypeScript Certificate.pdf" target="_blank"
 									class="btn-view-project">View PDF</a>
@@ -833,7 +833,7 @@
 					<div id="popup-7" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
 							<img src="images/Certificates/JavaScript_Deep_Dive.png"
-								alt="Advanced JavaScript Certificate">
+								alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/Scrimba Certifications/JavaScript Deep Dive Certificate.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -858,7 +858,7 @@
 					</div>
 					<div id="popup-8" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/JavaScript.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/JavaScript.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/Scrimba Certifications/JavaScript Certificate For Oussema Mansoouri.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -911,7 +911,7 @@
 					</div>
 					<div id="popup-10" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/Kubernetes.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/Kubernetes.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/Kubernetes Certificate For Oussema Mansouri.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -977,6 +977,56 @@
 				<!-- Single Certificate starts -->
 				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
 					<div class="single-portfolio">
+						<a href="#popup-40" class="has-popup">
+							<img src="images/Certificates/Introduction to Python Certificate.jpg" class="Portfolio Image" alt="" />
+							<div class="single-portfolio-overlay">
+								<h2>Introduction to Python</h2>
+								<h3>DataCamp</h3>
+							</div>
+						</a>
+					</div>
+					<div id="popup-40" class="popup-box mfp-fade mfp-hide">
+						<div class="content">
+							<img src="images/Certificates/Introduction to Python Certificate.jpg" alt="Introduction to Python Certificate">
+							<div class="btn-layout">
+								<a href="./images/DataCamp Certifications/Introduction to Python.pdf"
+									target="_blank" class="btn-view-project">View PDF</a>
+								<a href="#" target="_blank"
+									class="btn-view-project">Source</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Single Certificate Ends -->
+
+				<!-- Single Certificate starts -->
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
+					<div class="single-portfolio">
+						<a href="#popup-41" class="has-popup">
+							<img src="images/Certificates/intermediate python certificate.jpg" class="Portfolio Image" alt="" />
+							<div class="single-portfolio-overlay">
+								<h2>Intermediate to Python</h2>
+								<h3>DataCamp</h3>
+							</div>
+						</a>
+					</div>
+					<div id="popup-41" class="popup-box mfp-fade mfp-hide">
+						<div class="content">
+							<img src="images/Certificates/intermediate python certificate.jpg" alt="intermediate to Python Certificate">
+							<div class="btn-layout">
+								<a href="./images/DataCamp Certifications/Intermediate Python.pdf"
+									target="_blank" class="btn-view-project">View PDF</a>
+								<a href="#" target="_blank"
+									class="btn-view-project">Source</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Single Certificate Ends -->
+
+				<!-- Single Certificate starts -->
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
+					<div class="single-portfolio">
 						<a href="#popup-13" class="has-popup">
 							<img src="images/Certificates/Data_Analytics.png" class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
@@ -987,7 +1037,7 @@
 					</div>
 					<div id="popup-13" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/Data_Analytics.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/Data_Analytics.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/Oussema Mansouri Data Analytics Certificate.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1012,7 +1062,7 @@
 					</div>
 					<div id="popup-14" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/UI_Design.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/UI_Design.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/Scrimba Certifications/Learn UI Design Certificate For Oussema Mansouri.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1037,7 +1087,7 @@
 					</div>
 					<div id="popup-15" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/From_Figma_To_Code.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/From_Figma_To_Code.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/Scrimba Certifications/From Figma to code Certificate For Oussema Mansouri.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1062,7 +1112,7 @@
 					</div>
 					<div id="popup-16" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/SQL.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/SQL.png" alt=" Certificate">
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/Oussema Mansouri Sql Certificate.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1089,7 +1139,7 @@
 					<div id="popup-17" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
 							<img src="images/Certificates/Practical_Math_For_FrontEnd_Developers.png"
-								alt="Advanced JavaScript Certificate">
+								alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/Scrimba Certifications/Practical Math for Frontend Developers Certification For Oussema Mansouri.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1114,7 +1164,7 @@
 					</div>
 					<div id="popup-18" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/HTML_And_CSS.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/HTML_And_CSS.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/Scrimba Certifications/HTML and CSS Certificate For Oussema Mansouri.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1139,7 +1189,7 @@
 					</div>
 					<div id="popup-19" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/CSS_Animations.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/CSS_Animations.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/Scrimba Certifications/CSS Animations Certificate For Oussema Mansouri.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1164,7 +1214,7 @@
 					</div>
 					<div id="popup-20" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/CSS.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/CSS.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/Mansouri Oussema CSS Certificate.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1189,7 +1239,7 @@
 					</div>
 					<div id="popup-21" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/HTML.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/HTML.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/Mansouri Oussema HTML Certificate.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1214,7 +1264,7 @@
 					</div>
 					<div id="popup-22" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/TensorFlow.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/TensorFlow.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/Oussema Mansouri TensorFlow for Beginners Certificate.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1239,7 +1289,7 @@
 					</div>
 					<div id="popup-23" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/Numpy.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/Numpy.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/Oussema Mansouri Numpy Certificate.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1264,7 +1314,7 @@
 					</div>
 					<div id="popup-23" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/Pandas.png" alt="Advanced JavaScript Certificate">
+							<img src="images/Certificates/Pandas.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/Oussema Mansouri Python Pandas Certificate.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1925,7 +1975,7 @@
 	<!-- Footer Section Ends -->
 
 	<!-- Jquery Library File -->
-	<script src="js/jquery-1.12.4.min.js" ></script>
+	<script src="js/jquery-1.12.4.min.js"></script>
 	<!-- Bootstrap js file -->
 	<script src="js/bootstrap.min.js"></script>
 	<!-- Wow js file -->
