--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 							<li><a href="#certification" class="active-portfolio" data-filter="*">All </a></li>
 							<li><a href="#certification" data-filter=".FullStackDev">Full Stack Dev</a></li>
 							<li><a href="#certification" data-filter=".DataScience">Data Science & IA</a></li>
-							<li><a href="#certification" data-filter=".DevOps">DevOps</a></li>
+							<li style="margin-bottom: 16px; margin-top: 16px;"><a href="#certification" data-filter=".DevOps">DevOps</a></li>
 						</ul>
 					</div>
 					<!-- Certificates Filter list End -->
@@ -1355,7 +1355,7 @@
 							<li><a href="#portfolio" class="active-portfolio" data-filter="*">All </a></li>
 							<li><a href="#portfolio" data-filter=".FullStackDevProject">Full Stack Dev</a></li>
 							<li><a href="#portfolio" data-filter=".DataScienceProject">Data Science & IA</a></li>
-							<li><a href="#portfolio" data-filter=".DevOpsProject">DevOps</a></li>
+							<li style="margin-bottom: 16px; margin-top: 16px;" ><a href="#portfolio" data-filter=".DevOpsProject">DevOps</a></li>
 						</ul>
 					</div>
 					<!-- Portfolio Filter list End -->
