--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 							, focused on streamlining development and deployment processes. </p>
 
 					</div>
-					<a href="#resume" class="btn-download">View Resume</a>
+					<a href="./images/Software Engineer.pdf" target="_blank" class="btn-download">View Resume</a>
 					<!-- Banner Content End -->
 				</div>
 			</div>
@@ -312,7 +312,7 @@
 								<!-- Experience Slide start -->
 								<div class="swiper-slide">
 									<div class="experience-single">
-										<h5>2022 - 2023</h5>
+										<h5>2022 - 2022 | 2 months</h5>
 										<h4>Practical training</h4>
 										<p>I did my internship at International coach start-up, which helped me create
 											and develop
@@ -325,7 +325,7 @@
 								<!-- Experience Slide start -->
 								<div class="swiper-slide">
 									<div class="experience-single">
-										<h5>2023 - 2024</h5>
+										<h5>2023 - 2023 | 4 months</h5>
 										<h4>Final internship</h4>
 										<p>I developed a platform offers an innovative and important solution for
 											training
@@ -335,6 +335,32 @@
 									</div>
 								</div>
 								<!-- Experience Slide end -->
+
+																<!-- Experience Slide start -->
+								<div class="swiper-slide">
+									<div class="experience-single">
+										<h5>2023 - 2024 | 2 Months</h5>
+										<h4>Devops Practical Training</h4>
+										<p> Participation in the automation of deployment and configuration environments with Docker,
+                                            Jenkins and Git and more.
+										</p>
+									</div>
+								</div>
+								<!-- Experience Slide end -->
+
+								<!-- Experience Slide start -->
+								<div class="swiper-slide">
+									<div class="experience-single">
+										<h5>2025 - 2025 | 5 Months </h5>
+										<h4>Memory Workshop - AI for Agriculture</h4>
+										<p>Memory project - Development of an AI system for the early detection of plant
+                                           diseases.
+										   Using machine learning and computer or mobile vision to help farmers.
+										</p>
+									</div>
+								</div>
+								<!-- Experience Slide end -->
+
 							</div>
 
 							<!-- Experience Pagination Start -->
@@ -352,16 +378,6 @@
 						<!-- Education Slider Start -->
 						<div class="swiper-container education-slider">
 							<div class="swiper-wrapper">
-								<!-- Experience Slide start -->
-								<!-- <div class="swiper-slide">
-									<div class="experience-single">
-										<h5>2019 - 2020</h5>
-										<h4>Bacheloraate - Ali Belhwen</h4>
-										<p>After studying hard for four years, I managed to pass with an above average
-											mark in IT.</p>
-									</div>
-								</div> -->
-								<!-- Experience Slide end -->
 
 								<!-- Experience Slide start -->
 								<div class="swiper-slide">
@@ -378,13 +394,25 @@
 								<!-- Experience Slide start -->
 								<div class="swiper-slide">
 									<div class="experience-single">
-										<h5>6 Month</h5>
+										<h5> 2024 - 2024 | 6 Months</h5>
 										<h4>Certificate in web development Java, Spring Boot and Angular </h4>
 										<p>At Elife training center under supervision of Paris Dauphine-PSL University,
 											Tunis campus.</p>
 									</div>
 								</div>
 								<!-- Experience Slide end -->
+
+								<!-- Experience Slide start -->
+								<div class="swiper-slide">
+									<div class="experience-single">
+										<h5>2023 - 2025</h5>
+										<h4>Master’s degree in Data Science</h4>
+										<p>After studying hard for two years, I managed to pass with an above average
+											mark in data science.</p>
+									</div>
+								</div>
+								<!-- Experience Slide end -->
+
 							</div>
 
 							<!-- Education Pagination Start -->
