--- a/index.html
+++ b/index.html
@@ -2,17 +2,37 @@
 <html lang="en">
 
 <head>
-	<!-- Meta -->
+		<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<!-- SEO Optimized Meta Tags -->
 	<meta name="description"
-		content="I am a versatile Full Stack Developer with expertise in Angular, Spring Boot, and Node.js, complemented by a strong foundation in data science and a keen interest in DevOps practices. I excel in designing and developing high-performance web applications that are both interactive and user-centric, driving engagement and delivering measurable results. With a passion for innovation and problem-solving, I continuously refine my skills and adopt emerging technologies to deliver scalable and efficient solutions. My dedication to excellence and collaborative mindset make me a valuable asset in crafting modern, impactful digital experiences.">
+		content="Oussema Mansouri - Expert Full Stack Developer specializing in Angular, Spring Boot, Node.js, Data Science & DevOps. Delivering high-performance web applications and innovative digital solutions.">
 	<meta name="keywords"
-		content="oussema mansouri, Full Stack Developer, Angular, Spring Boot, Node.js, data science, IA, DevOps">
-	<meta name="author" content="oussema mansouri">
-	<!-- Page Title -->
-	<title>Oussema Mansouri</title>
+		content="Oussema Mansouri, Full Stack Developer, Angular Developer, Spring Boot, Node.js, Data Science, DevOps Engineer, Web Development, Tunisia, Software Engineer">
+	<meta name="author" content="Oussema Mansouri">
+	<meta name="robots" content="index, follow">
+	<link rel="canonical" href="https://oussemamansouri.me/">
+	
+	<!-- Open Graph Meta Tags for Social Media -->
+	<meta property="og:title" content="Oussema Mansouri | Full Stack Developer & Data Scientist">
+	<meta property="og:description" content="Expert Full Stack Developer specializing in Angular, Spring Boot, Node.js, Data Science & DevOps. Delivering innovative digital solutions.">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://oussemamansouri.me/">
+	<meta property="og:image" content="https://oussemamansouri.me/images/aboutMe.jpg">
+	<meta property="og:site_name" content="Oussema Mansouri Portfolio">
+	
+	<!-- Twitter Card Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Oussema Mansouri | Full Stack Developer & Data Scientist">
+	<meta name="twitter:description" content="Expert Full Stack Developer specializing in Angular, Spring Boot, Node.js, Data Science & DevOps.">
+	<meta name="twitter:image" content="https://oussemamansouri.me/images/aboutMe.jpg">
+	
+	<!-- Page Title - SEO Optimized -->
+	<title>Oussema Mansouri | Full Stack Developer & Data Scientist | Angular, Spring Boot, DevOps Expert</title>
+	
 	<!-- Google Fonts css-->
 	<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash%7CRoboto:300,400,400i,500,500i,700,700i,900"
 		rel="stylesheet">
