--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-		<!-- Meta -->
+	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
+
 	<!-- SEO Optimized Meta Tags -->
 	<meta name="description"
 		content="Oussema Mansouri - Expert Full Stack Developer specializing in Angular, Spring Boot, Node.js, Data Science & DevOps. Delivering high-performance web applications and innovative digital solutions.">
@@ -15,24 +15,26 @@
 	<meta name="author" content="Oussema Mansouri">
 	<meta name="robots" content="index, follow">
 	<link rel="canonical" href="https://oussemamansouri.me/">
-	
+
 	<!-- Open Graph Meta Tags for Social Media -->
 	<meta property="og:title" content="Oussema Mansouri | Full Stack Developer & Data Scientist">
-	<meta property="og:description" content="Expert Full Stack Developer specializing in Angular, Spring Boot, Node.js, Data Science & DevOps. Delivering innovative digital solutions.">
+	<meta property="og:description"
+		content="Expert Full Stack Developer specializing in Angular, Spring Boot, Node.js, Data Science & DevOps. Delivering innovative digital solutions.">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://oussemamansouri.me/">
 	<meta property="og:image" content="https://oussemamansouri.me/images/aboutMe.jpg">
 	<meta property="og:site_name" content="Oussema Mansouri Portfolio">
-	
+
 	<!-- Twitter Card Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Oussema Mansouri | Full Stack Developer & Data Scientist">
-	<meta name="twitter:description" content="Expert Full Stack Developer specializing in Angular, Spring Boot, Node.js, Data Science & DevOps.">
+	<meta name="twitter:description"
+		content="Expert Full Stack Developer specializing in Angular, Spring Boot, Node.js, Data Science & DevOps.">
 	<meta name="twitter:image" content="https://oussemamansouri.me/images/aboutMe.jpg">
-	
+
 	<!-- Page Title - SEO Optimized -->
 	<title>Oussema Mansouri | Full Stack Developer & Data Scientist | Angular, Spring Boot, DevOps Expert</title>
-	
+
 	<!-- Google Fonts css-->
 	<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash%7CRoboto:300,400,400i,500,500i,700,700i,900"
 		rel="stylesheet">
@@ -356,13 +358,14 @@
 								</div>
 								<!-- Experience Slide end -->
 
-																<!-- Experience Slide start -->
+								<!-- Experience Slide start -->
 								<div class="swiper-slide">
 									<div class="experience-single">
 										<h5>2023 - 2024 | 2 Months</h5>
 										<h4>Devops Practical Training</h4>
-										<p> Participation in the automation of deployment and configuration environments with Docker,
-                                            Jenkins and Git and more.
+										<p> Participation in the automation of deployment and configuration environments
+											with Docker,
+											Jenkins and Git and more.
 										</p>
 									</div>
 								</div>
@@ -374,8 +377,8 @@
 										<h5>2025 - 2025 | 5 Months </h5>
 										<h4>Memory Workshop - AI for Agriculture</h4>
 										<p>Memory project - Development of an AI system for the early detection of plant
-                                           diseases.
-										   Using machine learning and computer or mobile vision to help farmers.
+											diseases.
+											Using machine learning and computer or mobile vision to help farmers.
 										</p>
 									</div>
 								</div>
@@ -704,7 +707,8 @@
 							<li><a href="#certification" class="active-portfolio" data-filter="*">All </a></li>
 							<li><a href="#certification" data-filter=".FullStackDev">Full Stack Dev</a></li>
 							<li><a href="#certification" data-filter=".DataScience">Data Science & IA</a></li>
-							<li style="margin-bottom: 16px; margin-top: 16px;"><a href="#certification" data-filter=".DevOps">DevOps</a></li>
+							<li style="margin-bottom: 16px; margin-top: 16px;"><a href="#certification"
+									data-filter=".DevOps">DevOps</a></li>
 						</ul>
 					</div>
 					<!-- Certificates Filter list End -->
@@ -828,8 +832,7 @@
 					</div>
 					<div id="popup-5" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/The_new_JS_For_Web_Dev.png"
-								alt="Certificate">
+							<img src="images/Certificates/The_new_JS_For_Web_Dev.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/SimpliLearn Certifications/TypeScript Certificate.pdf" target="_blank"
 									class="btn-view-project">View PDF</a>
@@ -880,8 +883,7 @@
 					</div>
 					<div id="popup-7" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/JavaScript_Deep_Dive.png"
-								alt="Certificate">
+							<img src="images/Certificates/JavaScript_Deep_Dive.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/Scrimba Certifications/JavaScript Deep Dive Certificate.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1026,7 +1028,8 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
 					<div class="single-portfolio">
 						<a href="#popup-40" class="has-popup">
-							<img src="images/Certificates/Introduction to Python Certificate.jpg" class="Portfolio Image" alt="" />
+							<img src="images/Certificates/Introduction to Python Certificate.jpg"
+								class="Portfolio Image" alt="" />
 							<div class="single-portfolio-overlay">
 								<h2>Introduction to Python</h2>
 								<h3>DataCamp</h3>
@@ -1035,12 +1038,12 @@
 					</div>
 					<div id="popup-40" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/Introduction to Python Certificate.jpg" alt="Introduction to Python Certificate">
+							<img src="images/Certificates/Introduction to Python Certificate.jpg"
+								alt="Introduction to Python Certificate">
 							<div class="btn-layout">
-								<a href="./images/DataCamp Certifications/Introduction to Python.pdf"
-									target="_blank" class="btn-view-project">View PDF</a>
-								<a href="#" target="_blank"
-									class="btn-view-project">Source</a>
+								<a href="./images/DataCamp Certifications/Introduction to Python.pdf" target="_blank"
+									class="btn-view-project">View PDF</a>
+								<a href="#" target="_blank" class="btn-view-project">Source</a>
 							</div>
 						</div>
 					</div>
@@ -1051,7 +1054,8 @@
 				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScience">
 					<div class="single-portfolio">
 						<a href="#popup-41" class="has-popup">
-							<img src="images/Certificates/intermediate python certificate.jpg" class="Portfolio Image" alt="" />
+							<img src="images/Certificates/intermediate python certificate.jpg" class="Portfolio Image"
+								alt="" />
 							<div class="single-portfolio-overlay">
 								<h2>Intermediate to Python</h2>
 								<h3>DataCamp</h3>
@@ -1060,12 +1064,12 @@
 					</div>
 					<div id="popup-41" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/intermediate python certificate.jpg" alt="intermediate to Python Certificate">
+							<img src="images/Certificates/intermediate python certificate.jpg"
+								alt="intermediate to Python Certificate">
 							<div class="btn-layout">
-								<a href="./images/DataCamp Certifications/Intermediate Python.pdf"
-									target="_blank" class="btn-view-project">View PDF</a>
-								<a href="#" target="_blank"
-									class="btn-view-project">Source</a>
+								<a href="./images/DataCamp Certifications/Intermediate Python.pdf" target="_blank"
+									class="btn-view-project">View PDF</a>
+								<a href="#" target="_blank" class="btn-view-project">Source</a>
 							</div>
 						</div>
 					</div>
@@ -1186,8 +1190,7 @@
 					</div>
 					<div id="popup-17" class="popup-box mfp-fade mfp-hide">
 						<div class="content">
-							<img src="images/Certificates/Practical_Math_For_FrontEnd_Developers.png"
-								alt="Certificate">
+							<img src="images/Certificates/Practical_Math_For_FrontEnd_Developers.png" alt="Certificate">
 							<div class="btn-layout">
 								<a href="./images/Scrimba Certifications/Practical Math for Frontend Developers Certification For Oussema Mansouri.pdf"
 									target="_blank" class="btn-view-project">View PDF</a>
@@ -1403,7 +1406,8 @@
 							<li><a href="#portfolio" class="active-portfolio" data-filter="*">All </a></li>
 							<li><a href="#portfolio" data-filter=".FullStackDevProject">Full Stack Dev</a></li>
 							<li><a href="#portfolio" data-filter=".DataScienceProject">Data Science & IA</a></li>
-							<li style="margin-bottom: 16px; margin-top: 16px;" ><a href="#portfolio" data-filter=".DevOpsProject">DevOps</a></li>
+							<li style="margin-bottom: 16px; margin-top: 16px;"><a href="#portfolio"
+									data-filter=".DevOpsProject">DevOps</a></li>
 						</ul>
 					</div>
 					<!-- Portfolio Filter list End -->
@@ -1685,6 +1689,38 @@
 									at an early stage, enabling timely intervention and better crop health management.
 								</p>
 								<span class="btn-view-project">Private Project</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Single Portfolio Ends -->
+
+				<!-- Single Portfolio starts -->
+				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-box DataScienceProject ">
+					<div class="single-portfolio">
+						<a href="#popup-38" class="has-popup">
+							<img src="images/output.png" class="Portfolio Image" alt="" />
+							<div class="single-portfolio-overlay">
+								<h2>Real Time Drowsiness Detection</h2>
+								<h3>AI System</h3>
+							</div>
+						</a>
+					</div>
+					<div id="popup-38" class="popup-box mfp-fade mfp-hide">
+						<div class="content">
+							<div class="image">
+								<img src="images/output.png" alt="">
+							</div>
+							<div class="desc">
+								<h4>Real Time Drowsiness Detection</h4>
+								<h5><i class="fa fa-folder"></i> AI System </h5>
+								<p>
+									This project implements a real-time drowsiness detection system using computer
+									vision and deep learning. It utilizes a pre-trained model to classify eye states
+									(open or closed) from webcam input and triggers an alert if drowsiness is detected.
+								</p>
+								<a href="https://github.com/oussemamansouri/Real-Time-Drowsiness-Detection"
+									class="btn-view-project">View Project</a>
 							</div>
 						</div>
 					</div>
